--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -2,20 +2,20 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'com.autumn'
+version '1.0'
 
 repositories {
     mavenLocal()
     mavenCentral()
 }
 
-dependencies {
-    implementation 'com.glaze.autumn:glaze-autumn:1.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.autumn.example.MainExample'
+    }
 }
 
-test {
-    useJUnitPlatform()
+dependencies {
+    implementation 'com.glaze.autumn:glaze-autumn:1.3'
 }
