All projects - Updated README files - Updated dependency version of autumn in build.gradle files

--- a/multi-project/app/app.gradle
+++ b/multi-project/app/app.gradle
@@ -14,5 +14,5 @@ repositories {
 dependencies {
     implementation project(":notification")
     implementation project(":clients")
-    implementation 'com.glaze.autumn:glaze-autumn:1.4'
+    implementation 'com.glaze:autumn:0.1'
 }
