--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -3,11 +3,12 @@ plugins {
 }
 
 group 'com.autumn'
-version '1.0'
+version '0.1'
+
+sourceCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenLocal()
-    mavenCentral()
 }
 
 jar {
@@ -17,5 +18,5 @@ jar {
 }
 
 dependencies {
-    implementation 'com.glaze.autumn:glaze-autumn:1.3'
+    implementation 'com.glaze:autumn:0.1'
 }
