--- a/Kotlin/build.gradle
+++ b/Kotlin/build.gradle
@@ -5,6 +5,9 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -17,6 +20,6 @@ jar {
 }
 
 dependencies {
-    implementation "com.glaze.autumn:glaze-autumn:1.4"
+    implementation "com.glaze:autumn:0.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
