--- a/Kotlin/build.gradle
+++ b/Kotlin/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.5.31'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group 'org.example'
@@ -13,10 +15,8 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.autumn.example.Main'
-    }
+application {
+    mainClass.set('com.autumn.example.Main')
 }
 
 dependencies {
