--- a/multi-project/app/app.gradle
+++ b/multi-project/app/app.gradle
@@ -1,18 +1,8 @@
-plugins {
-    id 'application'
-    id 'java'
-}
-
-group = 'com.example'
-version = '0.0.1'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
+application {
+    mainClass.set('com.example.app.AppApplication')
 }
 
 dependencies {
     implementation project(":notification")
     implementation project(":clients")
-    implementation 'com.glaze:autumn:0.1'
 }
