--- a/multi-project/clients/clients.gradle
+++ b/multi-project/clients/clients.gradle
@@ -1,15 +1,3 @@
-plugins {
-    id 'java'
-}
-
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
-
 dependencies {
-    implementation 'com.glaze:autumn:0.1'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
 }
