README - Created a root level README for documentation
Multi-Project build
- Created a precompiled plugin to share configuration among sub projects
- Applied precompiled plugin to subprojects
- Removed build.gradle in favor of precompiled plugin

Circular dependencies
- Created project to showcase circular dependency detection

Kotlin
- Updated kotlin shadowJar task to exclude conflicting files

--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
@@ -13,7 +12,7 @@ repositories {
 }
 
 application {
-    mainClass.set('com.autumn.example.MainExample')
+    mainClass = 'com.autumn.example.MainExample'
 }
 
 dependencies {
