--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .idea
-Kotlin/.idea
-Kotlin/build
-Java/.idea
-Java/build
+**/.gradle
+**/.idea
 
 # Ignore Gradle project-specific cache directory
 .gradle
